<resources>
    <string name="app_name">Dawn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="main">Dawn</string>
    <string name="settings">Settings</string>
    <string name="setup">Setup</string>
    <string name="requests">Requests</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="default_server_address">https://messageserver.dawn-privacy.org</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_extradark">Extra Dark (Stargazer)</string>
    <string name="theme_light">Light</string>
    <string name="user_address_start">You</string>
    <string name="user_address">you</string>
    <string name="monday_short">Mo.</string>
    <string name="tuesday_short">Tu.</string>
    <string name="wednesday_short">We.</string>
    <string name="thursday_short">Th.</string>
    <string name="friday_short">Fr.</string>
    <string name="saturday_short">Sa.</string>
    <string name="sunday_short">Su.</string>
    <string name="notification_channel_bg">Background service is running</string>
    <string name="notification_bg_content">Dawn is keeping your messages up-to-date in background. You can hide this notification in the system settings or by tapping on it.</string>
    <string name="title_password_dialog">Authentication required</string>
    <string name="text_enter_password">Please unlock the app by entering your password:</string>
    <string name="text_no_password_provided">Your password is empty. Please try again!</string>
    <string name="text_wrong_password">Your password is wrong or decrypting the data failed for some other reason. Please try again!</string>
    <string name="main_text_no_chats_yet">You don\'t have any chats yet.\nStart a new one :)</string>
    <string name="main_text_profile_picture">Profile picture</string>
    <string name="main_text_sent_read">main</string>
    <string name="showchat_text_unknown_message_type">Unknown message type. Maybe an update of the app will enable showing this message.</string>
    <string name="showchat_hint_message">Type your message…</string>
    <string name="showchat_error_encrypting">Could not encrypt message:%1$s</string>
    <string name="internal_init_sent">%1$s sent an init request:\n%2$s</string>
    <string name="internal_init_received">%1$s sent you an init request:\n%2$s</string>
    <string name="internal_init_accept">%1$s accepted the init request</string>
    <string name="text_welcome">Welcome to Dawn!</string>
    <string name="heading_server">Select a server (optional)</string>
    <string name="text_server_address">If you want to connect to a custom server, please enter the address below. If you don\'t know what you are doing, just leave the box blank to use the default server.</string>
    <string name="heading_profile">Customize your profile</string>
    <string name="text_profile_name">Freely choose a name for your profile and enter it below:</string>
    <string name="hint_profile_name">Profile name</string>
    <string name="text_profile_bio">If you want, you can add a short text about you to your profile:</string>
    <string name="hint_profile_bio">Some words that describe you</string>
    <string name="heading_password">Set a password for the app</string>
    <string name="text_password">Enter a secure password below to encrypt the data of this app!\nCaution: Store this password somewhere safe or remember it well! Without your password it is impossible to read your chats or use the key that authenticates your messages in chats.</string>
    <string name="hint_password">Your secure password</string>
    <string name="hint_password_repeat">Your secure password (repeat)</string>
    <string name="error_passwords_not_matching">Your passwords do not match!</string>
    <string name="finish_setup">Finish Setup</string>
    <string name="title_passwords_not_matching_dialog">Passwords do not match!</string>
    <string name="text_passwords_not_matching_dialog">Your provided passwords were not identical! Please try again.</string>
    <string name="title_no_profile_name_dialog">Empty profile name!</string>
    <string name="text_no_profile_name_dialog">You need to enter a name for your profile! This doesn\'t need to be your real name, feel free to use any nickname you like.</string>
    <string name="title_failed_data_init_dialog">FATAL: data storage initialization failed!</string>
    <string name="text_failed_data_init_dialog">The app\'s storage was not initialized successfully. This might happen when a crash occurred during a previous initialization procedure. To mitigate this, you can try forcing the initialization and DELETING ALL PREVIOUSLY STORED DATA. If you already used the app and this happened, DO NOT PROCEED, but report a bug providing some information on how this happened. To proceed with wiping the app\'s storage, enter \"OK JUST DELETE ALL THE DATA\" in the box below. Otherwise, just cancel or enter anything else and hit OK.</string>
    <string name="settings_heading_profile">Profile</string>
    <string name="settings_text_profile_name">Change your profile name:</string>
    <string name="settings_text_profile_bio">Change your \"about me\" text:</string>
    <string name="settings_text_profile_handle">Set or change your handle name (this is needed in order to initiate a chat with you).\nHandles consist of alphanumeric characters (a-z, A-Z), dashes (-) and underscores (_).</string>
    <string name="settings_hint_profile_handle">\@my_example_handle</string>
    <string name="settings_hint_profile_handle_password">handle password</string>
    <string name="settings_text_init_secret">Your init secret is: %1$s\nYou need to give this information to anyone who should be able to open a chat with you. If you don\'t want this, disable it by allowing public init requests.</string>
    <string name="settings_text_allow_public_init">Allow init requests without init secret (not recommended)</string>
    <string name="settings_toast_code_copied">Code copied!</string>
    <string name="settings_error_handle_invalid">Handles can only contain a-z, A-Z, dashes and underscores!</string>
    <string name="settings_title_save_changes_dialog">Unsaved changes!</string>
    <string name="settings_text_save_changes_dialog">You have changed some settings. Do you want to save them?</string>
    <string name="settings_heading_theme">Theme</string>
    <string name="settings_text_theme_use_system">Choose the theme based on Android theme</string>
    <string name="settings_hint_theme_manual">Set the theme manually</string>
    <string name="settings_text_theme_system_light">Set theme to be used when Android is in light mode</string>
    <string name="settings_text_theme_system_dark">Set theme to be used when Android is in dark mode</string>
    <string name="settings_error_no_init_id">Could not get init ID, not setting handle!</string>
    <string name="settings_title_error_saving_changes">Error saving changes</string>
    <string name="settings_text_error_saving_changes">Not all changes were saved successfully. You can try to save them again or discard them.</string>
    <string name="initiate_app_bar">New Chat</string>
    <string name="initiate_heading_search">Search for a handle:</string>
    <string name="initiate_hint_profile_handle">\@my_example_handle</string>
    <string name="initiate_hint_profile_handle_secret">init secret</string>
    <string name="initiate_hint_init_comment">comment</string>
    <string name="initiate_search_handle">Search handle and initiate chat</string>
    <string name="initiate_init_failed">Init failed: </string>
    <string name="initiate_init_request_sent">Request was sent successfully</string>
    <string name="initiate_not_ready">The network connection is not ready yet. Please try again in a view seconds.</string>
    <string name="initiate_error">Error during chat initialization: </string>
    <string name="receive_text_wrong_init_secret">Wrong init secret!</string>
    <string name="receive_text_key_slots_empty">No key slots left to initialize. Try again later after your recipient got back online.</string>
    <string name="debug_app_bar">Debugging Tools</string>
    <string name="debug_heading_preference">Preferences</string>
    <string name="debug_text_preference">Enter a preference you want to look at or change:</string>
    <string name="debug_text_preference_value">If you want to change the preference, enter the new string below:</string>
    <string name="debug_hint_enter_preference">very_interesting_preference</string>
    <string name="debug_hint_enter_value">example value</string>
    <string name="debug_btn_get_preference">Get</string>
    <string name="debug_btn_set_preference">Change</string>
    <string name="debug_dialog_preference_get_heading">Get preference</string>
    <string name="debug_dialog_preference_set_heading">Set preference</string>
    <string name="debug_dialog_preference_get_text_success">Preference \"%1$s\" was found. Value: \"%2$s\"</string>
    <string name="debug_dialog_preference_get_text_not_found">Preference \"%1$s\" was not found.</string>
    <string name="debug_heading_files">Files</string>
    <string name="debug_text_files">Enter a file or directory you want to check out (\"/\" is the root of the app\'s filesDir):</string>
    <string name="debug_hint_file">/some_file</string>
    <string name="debug_btn_list_files">List files</string>
    <string name="debug_btn_show_content">Show content</string>
    <string name="debug_btn_print_content">Print content</string>
    <string name="debug_btn_show_raw_content">Show raw content</string>
    <string name="debug_dialog_list_files_heading">List files</string>
    <string name="debug_dialog_list_files_not_directory">Error: Not a directory</string>
    <string name="debug_dialog_list_files_empty">Empty directory</string>
    <string name="debug_dialog_list_files_directory">(directory)</string>
    <string name="debug_dialog_list_files_file">(file)</string>
    <string name="debug_dialog_show_content_heading">Show file content</string>
    <string name="debug_dialog_show_content_not_file">Error: Not a file</string>
    <string name="debug_dialog_show_content_read_fail">Error: Could not read file</string>
    <string name="initrequests_app_bar">Init Requests</string>
    <string name="showinitrequest_main_info">If you accept this request, a chat with the requesting person will be initiated.\nYour public signature key will be transmitted and the person will know you read the request.\nIf you don\'t accept the request, no data will be transmitted.</string>
    <string name="showinitrequest_btn_accept">Accept</string>
    <string name="showinitrequest_btn_reject">Reject</string>
</resources>