<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023 Laurenz Werner
  ~
  ~ This file is part of Dawn.
  ~
  ~ Dawn is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Dawn is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Dawn.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DebugActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrapping_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        android:fitsSystemWindows="true">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:context=".InitiateChatActivity">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.Dawn.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimaryVariant"
                    app:popupTheme="@style/Theme.Dawn.PopupOverlay" />

            </com.google.android.material.appbar.AppBarLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarThumbVertical="?attr/colorPrimary">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/content_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/backgroundColor">

                    <TextView
                        android:id="@+id/tvPreferenceHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="90dp"
                        android:layout_marginEnd="30dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/debug_heading_preference"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvPreference"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="30dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvPreferenceHeading"
                        android:text="@string/debug_text_preference" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etPreferenceWrapper"
                        style="@style/Theme.Dawn.TextField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="30dp"
                        android:ems="10"
                        android:hint="@string/debug_hint_enter_preference"
                        android:inputType="text"
                        android:minHeight="48dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvPreference">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPreference"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="?android:attr/textColor"
                            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tvPreferenceValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="30dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/etPreferenceWrapper"
                        android:text="@string/debug_text_preference_value" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etPreferenceValueWrapper"
                        style="@style/Theme.Dawn.TextField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="30dp"
                        android:ems="10"
                        android:hint="@string/debug_hint_enter_value"
                        android:inputType="text"
                        android:minHeight="48dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvPreferenceValue">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPreferenceValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="?android:attr/textColor"
                            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnGetPreference"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="5dp"
                        android:minHeight="48dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/etPreferenceValueWrapper"
                        android:text="@string/debug_btn_get_preference"
                        />

                    <Button
                        android:id="@+id/btnSetPreference"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="30dp"
                        android:minHeight="48dp"
                        app:layout_constraintStart_toEndOf="@id/btnGetPreference"
                        app:layout_constraintTop_toBottomOf="@id/etPreferenceValueWrapper"
                        android:text="@string/debug_btn_set_preference"
                        />

                    <TextView
                        android:id="@+id/tvFilesHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="30dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btnSetPreference"
                        android:text="@string/debug_heading_files"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvFiles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="30dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvFilesHeading"
                        android:text="@string/debug_text_files" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etFileWrapper"
                        style="@style/Theme.Dawn.TextField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="30dp"
                        android:ems="10"
                        android:hint="@string/debug_hint_file"
                        android:inputType="text"
                        android:minHeight="48dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvFiles">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etFile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="?android:attr/textColor"
                            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnListFiles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="30dp"
                        android:minHeight="48dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/etFileWrapper"
                        android:text="@string/debug_btn_list_files"
                        />

                    <Button
                        android:id="@+id/btnShowFileContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="30dp"
                        android:minHeight="48dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btnListFiles"
                        android:text="@string/debug_btn_show_content"
                        />

                    <Button
                        android:id="@+id/btnShowRawFileContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="30dp"
                        android:minHeight="48dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btnShowFileContent"
                        android:text="@string/debug_btn_show_raw_content"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>